--- a/resources/sass/base/_header_menu.scss
+++ b/resources/sass/base/_header_menu.scss
@@ -67,6 +67,8 @@ nav{
         left: 0;
     }
     &.nav_trasp{
-        background-color: transparent!important;
+        @media screen and (min-width: 992px) {	 // Just for DESKTOP
+            background-color: transparent!important;
+        }
     }
 }
